# grcb-experiments

./: .gitmodules  CMakeLists.txt  README.org
data/geometries/: dual-axis-parallel.toml  single-axis-parallel.toml
src/: table1.cpp  table2.cpp  table3.cpp  table4.cpp
